<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="location_permission_exp">Sorry, Bluetooth Scanning requires at least coarse location access permission (on Android 6.0 and above).
        Please restart the app and grant the permission.</string>
    <string name="storage_exp">Write error: %s</string>
    <string name="new_folder">Created new folder: %s</string>
    <string name="label_data">Value:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="working">Please wait…</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="start_ble_search">Connect with BLE \nMultimeter</string>
    <string name="start_log_view">View Recorded Log</string>
    <string name="start_setting">Change Settings</string>

    <string name="logfile_info">Path: %s\nSize: %.2f KB with %d new data points</string>
    <string name="graphdata_info">Max: %5.3f | Min: %5.3f | Avg: %5.3f | Std.dev: %5.3f</string>

    <string name="logview_actionBar_title">View: %s</string>

    <string name="parse_error_toast">Could not parse CSV, no header (time) comment found!</string>

    <string name="alarm_channel_name">Alarms</string>
    <string name="alarm_channel_desc">Notifications if custom condition is met</string>
    <string name="log_channel_name">Logging</string>
    <string name="log_channel_desc">Indicates running data logging</string>


    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_viewport">Graph Viewport Size</string>
    <string name="pref_viewport_desc">Number of displayed data points</string>

    <string name="pref_ignore_ol">Skip OL/UL</string>
    <string name="pref_ignore_ol_desc">Drop value if range is overloaded</string>

    <string name="pref_shunt_mode">Shunt mode</string>
    <string name="pref_shunt_mode_desc">Calculate current from external shunt resistor voltage drop</string>
    <string name="pref_shunt_ohm">Resistance [Ω]</string>

    <string name="pref_thermocouple_mode">Thermocouple mode</string>
    <string name="pref_thermocouple_desc">Calculate temperature from voltage \n(type K …)</string>
    <string name="pref_thermocouple_coeff">Seebeck coefficient [mV/K]</string>
    <string name="pref_thermocouple_ref">Reference temperature source</string>
    <string-array name="pref_thermocouple_ref_entries">
        <item>Constant value:\n    (configure below)</item>
    </string-array>
    <string-array name="pref_thermocouple_ref_vals">
        <item>-1</item>
    </string-array>
    <string name="pref_thermocouple_ref_constant">Constant reference temperature [°C]</string>

    <string name="pref_thermistor_mode">Thermistor mode</string>
    <string name="pref_thermistor_desc">Calculate temperature from resistance \n(100k NTC …)</string>
    <string name="pref_thermistor_ohm">Nominal resistance [Ω] @ 25°C</string>
    <string name="pref_thermistor_beta">Beta factor [K] @ 25°C</string>

    <string name="pref_rtd_mode">RTD mode</string>
    <string name="pref_rtd_desc">Calculate from resistance temperature detectors (PT100, PT500, PT1000 …)</string>
    <string name="pref_rtd_ohm">Nominal resistance [Ω] @ 0°C</string>
    <string name="pref_rtd_alpha">Alpha factor [Ω/(Ω·K)]</string>

    <string name="pref_auto_connect">Auto reconnect</string>
    <string name="pref_auto_connect_desc">Try to reconnect after disconnection automatically</string>
    <string name="pref_uuid">Bluetooth UUID</string>
    <string name="pref_uuid_desc">UUID of the BLE data characteristic</string>

    <string name="pref_alarm_condition">Condition Type</string>
    <string-array name="alarm_conditions">
        <item>Above upper Limit</item>
        <item>Below lower or above upper Limit</item>
        <item>Below lower Limit</item>
    </string-array>
    <string-array name="alarm_condition_values">
        <item>above</item>
        <item>both</item>
        <item>below</item>
    </string-array>

    <string name="pref_alarm_enabled">Alarm enabled</string>
    <string name="pref_alarm_low">Lower Limit Value</string>
    <string name="pref_alarm_high">Upper Limit Value</string>
    <string name="pref_alarm_sample">Sample Count</string>
    <string name="pref_alarm_sample_desc">Samples that have to be over a limit to trigger the alarm</string>
    <string name="pref_vibration">Vibration</string>
    <string name="pref_alarm_sound">Ringtone</string>

    <string name="pref_logdir">Log folder: %s</string>
    <string name="pref_logdir_desc">Setup directory access for log files</string>
    <string name="pref_reuse_log">Disable logfile reuse</string>
    <string name="pref_reuse_log_desc">Create new file (with numbering) if the name already exists, instead of appending</string>

    <string name="error_folder_not_setup">No folder setup, please select one in the settings first!</string>
    <string name="error_folder_missing">Folder not existing, check your settings</string>
    <string name="error_folder_empty">Folder contains no files, check your settings</string>
    <string name="error_folder_inacc">Could not open file under selected path</string>

    <string name="title_activity_view">Select Logfile</string>
</resources>
