<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Display">
        <EditTextPreference
            android:defaultValue="60"
            android:inputType="number"
            android:key="viewport"
            android:summary="@string/pref_viewport_desc"
            android:title="@string/pref_viewport"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Connection">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="reconnect"
            android:summary="@string/pref_auto_connect_desc"
            android:title="@string/pref_auto_connect" />
        <EditTextPreference
            android:defaultValue="0000ffe1-0000-1000-8000-00805f9b34fb"
            android:key="uuid"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_uuid_desc"
            android:title="@string/pref_uuid" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Alarm">
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_info_black_24dp"
            android:key="alarm_enabled"
            android:title="@string/pref_alarm_enabled" />
        <ListPreference
            android:defaultValue="above"
            android:dependency="alarm_enabled"
            android:entries="@array/alarm_conditions"
            android:entryValues="@array/alarm_condition_values"
            android:key="alarm_condition"
            android:title="@string/pref_alarm_condition" />

        <EditTextPreference
            android:defaultValue="3"
            android:dependency="alarm_enabled"
            android:inputType="number"
            android:key="samples"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_alarm_sample_desc"
            android:title="@string/pref_alarm_sample" />
        <EditTextPreference
            android:defaultValue="-0.000"
            android:dependency="alarm_enabled"
            android:inputType="numberSigned|numberDecimal"
            android:key="low_limit"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_alarm_low" />
        <EditTextPreference
            android:defaultValue="0.000"
            android:dependency="alarm_enabled"
            android:inputType="numberSigned|numberDecimal"
            android:key="high_limit"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_alarm_high" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="alarm_enabled"
            android:key="vibra"
            android:title="@string/pref_vibration" />
        <RingtonePreference
            android:defaultValue=""
            android:dependency="alarm_enabled"
            android:key="sound"
            android:ringtoneType="notification"
            android:title="@string/pref_alarm_sound" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Info">
        <Preference
        android:selectable="false"
        android:enabled="true"
        android:key="example_key"
        android:title="Version"
        android:summary="1.0 (Complied on 18.10.17)" />
        <Preference
        android:selectable="false"
        android:enabled="true"
        android:key="example_key"
        android:title="Credits"
        android:summary="GraphView\nGoogle BLE Example" />
    </PreferenceCategory>

</PreferenceScreen>
